// Copyright (c) 2000-2015 TeamDev Ltd. All rights reserved.
// TeamDev PROPRIETARY and CONFIDENTIAL.
// Use is subject to license terms.
syntax = "proto3";

package spine3.base;

option java_generate_equals_and_hash = true;
option java_multiple_files = true;
option java_outer_classname = "ChannelProto";
option java_package = "org.spine3.base";

import "spine3/base/user.proto";
import "spine3/base/client.proto";

// The request to create a channel for the passed user.
message ChannelRequest {
    UserId user_id = 1;
    Client client = 2;
}

message ChannelResponse {
    //TODO:2015-04-28:alexander.yevsyukov: Review channel API and see what data we need here.
    string channel_id = 1;
}
